update add.scrollbar & fixed delete rutines alert

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -348,7 +348,10 @@ section{
 .___delete{
     width: 100%;
     height: 100%;
-    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: fixed;
     display: none;
     align-items: center;
     justify-content: center;
